aggiunto link a google

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </head>
 
     <body>
-        <h1>Intestazione modificata</h1>
+        <h1>Intestazione</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <a href="https://www.google.com">Google</a>
+
     </body>
 </html>
