--- a/index.html
+++ b/index.html
@@ -12,3 +12,63 @@
 
     </body>
 </html>
+
+<!--
+Intestazione (Hero Section)
+
+
+Nome e professione in evidenza
+Breve tagline che definisce il tuo stile e approccio
+Immagine personale o lavoro principale
+Bottone Call-to-Action (Scarica CV o Contattami)
+
+
+About Me (Sezione Breve)
+
+
+Mini biografia
+Principali skill e competenze
+Filosofia di design in 2-3 righe
+Immagine professionale o workplace
+
+
+Portfolio Highlights
+
+
+3-4 progetti più significativi
+Miniature dei lavori
+Breve descrizione per ogni progetto
+Possibilità di ingrandire/vedere dettagli
+
+
+Servizi
+
+
+Elenco sintetico dei servizi offerti
+Icone che rappresentano ogni servizio
+Descrizione molto concisa
+
+
+Tecnologie e Strumenti
+
+
+Logos dei principali software/tools
+Breve indicazione di competenza
+
+
+Contatti
+
+
+Form contatto rapido
+Email
+Link ai social professionali
+Bottone WhatsApp/Telegram
+
+
+Footer
+
+
+Menù rapido
+Copyright
+Link privacy policy
+-->
