--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
         <a href="https://www.google.com">Google</a>
 
+      <img src="img/Immagine.jpg" alt="Placeholder image" width="100" height="200">
+
+      <img src="img/Immagine.jpg" alt="Placeholder image" style="width: 100px; height: 100px;">
+
+      <div style="background-image:url('https://i.ytimg.com/vi/-cQk6kK7JVs/maxresdefault.jpg');">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+        Donec ante eros, egestas vitae ullamcorper id,<br>
+        dignissim nec ipsum.
+      </div>
+
     </body>
 </html>
 
