--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
     <head>
       <title>Titolo della pagina</title>
+      <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
